# othi-web-workshop

./: Cargo.toml  README.md
examples/: surreal.rs
src/: main.rs  main_surreal.rs
src/error/: mod.rs
src/logging/: layer.rs  mod.rs
