[package]
name = "othi-web-workshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.16"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.27.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["serde", "serde_json", "json"] }
